# QtGst-Player

./: CMakeLists.txt  main.cpp  player.cpp  player.h  player_window.cpp  player_window.h
